<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_updates">

    <fragment
        android:id="@+id/navigation_updates"
        android:name="org.davincicodeos.updater.ui.updates.UpdatesFragment"
        android:label="@string/title_updates"
        tools:layout="@layout/fragment_updates" />

    <fragment
        android:id="@+id/navigation_flashing"
        android:name="org.davincicodeos.updater.ui.flashing.FlashingFragment"
        android:label="@string/title_flashing"
        tools:layout="@layout/fragment_flashing" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="org.davincicodeos.updater.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>